Fix scrollbars

--- a/public/css/recensie-manager-public-withoutprefix.css
+++ b/public/css/recensie-manager-public-withoutprefix.css
@@ -103,7 +103,7 @@
   display: block;
   transition: 0.3s;
   max-height: 50vh;
-  overflow: scroll;
+  overflow: auto;
 }
 
 .recmanWidget-content-name {
